fixed some bugs on mobile

--- a/css/header.css
+++ b/css/header.css
@@ -158,6 +158,7 @@ nav ul li:hover{
         justify-content: center;
         gap: 10px;
         transition-duration: .3s;
+        z-index: 1000;
     }
     
     .bars {
